testcases/error/missing_clock_signal.veryl
module missing_clock_signal {
    always_ff {}
}
